Fixed nav item size on mobile

--- a/site/assets/css/stylesheet.scss
+++ b/site/assets/css/stylesheet.scss
@@ -44,6 +44,9 @@ h2 {
   h2 {
     font-size: 6vmin;
   }
+  .navbar-brand, .nav-link, .nav-item {
+    font-size: 16px;
+  }
 }
 
 .logos {
